add: more localisations

--- a/Sources/PhotoSelectAndCrop/Resources/fr.lproj/Localizable.strings
+++ b/Sources/PhotoSelectAndCrop/Resources/fr.lproj/Localizable.strings
@@ -6,7 +6,7 @@
   
 */
 
-"Select a photo by tapping the icon below" = "Appuyez sur l'icône ci-dessous pour sélectionner une photo";
+"Select a photo by tapping the green icon below" = "Appuyez sur l'icône ci-dessous pour sélectionner une photo";
 "Change photo" = "Modifier";
 "Add photo" = "Ajouter une photo";
 "Cancel" = "Anuller";
