--- a/Sources/PhotoSelectAndCrop/Resources/de.lproj/Localizable.strings
+++ b/Sources/PhotoSelectAndCrop/Resources/de.lproj/Localizable.strings
@@ -10,7 +10,7 @@
 "Change photo" = "Foto ändern";
 "Add photo" = "Foto hinzufügen";
 "Cancel" = "Abrechnen";
-"Move and Scale" = "Bewegen und skalieren";
+"Move and Scale" = "Verschieben und skalieren";
 "Use photo" = "Foto verwenden";
 "Edit" = "Bearbeiten";
 "Save" = "Speichern";
