--- a/Sources/PhotoSelectAndCrop/Resources/ru.lproj/Localizable.strings
+++ b/Sources/PhotoSelectAndCrop/Resources/ru.lproj/Localizable.strings
@@ -1,16 +1,18 @@
-/* 
-  Localizable.strings
-  PhotoSelectAndCrop
-
-  Created by Tetyana Dzyuba on 07/11/2022
-  
-*/
-
-"Select a photo by tapping the green icon below" = "Выберите фотографию, нажав на зеленый значок ниже";
-"Change photo" = "Изменить фото";
+/* indicate that a photo is not available and one should be added */
 "Add photo" = "Добавить фото";
+
+/* indicate that the user cancel the action, closing the sheet */
 "Cancel" = "Отмена";
+
+/* indicate that a photo is available and may be changed to another */
+"Change photo" = "Изменить фото";
+
+/* indicate that the user may use gestures to move and or scale the image */
 "Move and Scale" = "Масштабирование";
+
+/* indicate that the user may select a photo by tapping on the green icon */
+"Select a photo by tapping the green icon below" = "Выберите фотографию, нажав на зеленый значок ниже";
+
+/* indicate that the user may use the photo as currently displayed */
 "Use photo" = "Готово";
-"Edit" = "Править";
-"Save" = "OK";
+
