--- a/Sources/PhotoSelectAndCrop/Resources/uk.lproj/Localizable.strings
+++ b/Sources/PhotoSelectAndCrop/Resources/uk.lproj/Localizable.strings
@@ -1,16 +1,18 @@
-/* 
-  Localizable.strings
-  PhotoSelectAndCrop
-
-  Created by Tetyana Dzyuba on 07/11/2022
-  
-*/
-
-"Select a photo by tapping the green icon below" = "Виберіть фотографію, натиснувши на зелений значок нижче";
-"Change photo" = "Змінити фото";
+/* indicate that a photo is not available and one should be added */
 "Add photo" = "Додати фото";
+
+/* indicate that the user cancel the action, closing the sheet */
 "Cancel" = "Відміна";
+
+/* indicate that a photo is available and may be changed to another */
+"Change photo" = "Змінити фото";
+
+/* indicate that the user may use gestures to move and or scale the image */
 "Move and Scale" = "Масштабування";
+
+/* indicate that the user may select a photo by tapping on the green icon */
+"Select a photo by tapping the green icon below" = "Виберіть фотографію, натиснувши на зелений значок нижче";
+
+/* indicate that the user may use the photo as currently displayed */
 "Use photo" = "Готово";
-"Edit" = "Правити";
-"Save" = "OK";
+
